# total_perspective_vortex

./: .gitignore  README.md  environment.yml  pyproject.toml  requirement.yml  requirements.txt  script.sh
data/models/: eeg_model.pkl  eeg_model_all_subjects.pkl
data/processed/: test_data.pkl
notebooks/: loader_other_datasets.ipynb  loader_other_datasets_filters.ipynb  parse_data.ipynb
notebooks/.ipynb_checkpoints/: sandbox_train-checkpoint.ipynb
scripts/: cli_args.py  main.py
src/: CustomCSP.py  __init__.py  loader.py  loader_bonus.py  main.py  predict.py  train.py  utils_pickle.py
src/loader/: __init__.py  eeg_utils.py  loader.py  utils.py  wavelet_transform.py
src/predict/: predict.py
src/preprocessing/: __init__.py  interface_eeg.py  load_data.py  preprocessing.py  signal_transformations.py  utils.py
src/train/: CustomLDA.py  CustomSCP.py  CustomStandardScaler.py  __init__.py  train.py
